@@ -705,10 +705,9 @@ class FontProperties(object):
         return parse_fontconfig_pattern(pattern)
 
     def __hash__(self):
-        l = self.__dict__.items()
-        l.sort()
+        l = [(k, getattr(self, "get" + k)()) for k in sorted(self.__dict__)]
         return hash(repr(l))
-
+ 
     def __str__(self):
         return self.get_fontconfig_pattern()
 
@@ -1181,7 +1180,7 @@ class FontManager:
         """
         debug = False
         if prop is None:
-            return self.defaultFont
+            prop = FontProperties()
         if is_string_like(prop):
             prop = FontProperties(prop)
         fname = prop.get_file()
